--- a/aseets/css/page1.css
+++ b/aseets/css/page1.css
@@ -1,5 +1,9 @@
 @charset 'utf-8';
 
+body{
+    flex-direction: column;
+}
+
 .fixed-bg{
     width: 100%;
     min-height: 100vh;
@@ -13,13 +17,17 @@
 .page1-title{
     height: 100vh;
     width: 100%;
+    display: flex;
+}
+.page1-title .title{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 .page1-title h1{
-    position: absolute;
-    bottom: 5rem;
-    right: 3rem;
     font-size: 2.5rem;
     color: white;
+    margin-bottom: 5rem;
 }
 .page1-text{
     background: rgba(0, 0, 0, .4);
